# ChangeLog for dev-perl/GSSAPI
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/GSSAPI/ChangeLog,v 1.13 2008/03/28 08:40:20 jer Exp $

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> GSSAPI-0.24.ebuild:
  Stable for HPPA too.

  13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> GSSAPI-0.24.ebuild:
  ppc. stable

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> GSSAPI-0.24.ebuild:
  amd64 stable

  20 Oct 2007; Markus Rothe <corsair@gentoo.org> GSSAPI-0.24.ebuild:
  Stable on ppc64; bug #196472

  09 Oct 2007; Markus Rothe <corsair@gentoo.org> GSSAPI-0.24.ebuild:
  Added ~ppc64; bug #189441

  06 Oct 2007; Raúl Porcel <armin76@gentoo.org> GSSAPI-0.24.ebuild:
  alpha/ia64/sparc/x86 stable

  08 Sep 2007; nixnut <nixnut@gentoo.org> GSSAPI-0.24.ebuild:
  Added ~ppc wrt bug 189441

  31 Aug 2007; Christoph Mende <angelos@gentoo.org> GSSAPI-0.24.ebuild:
  Added ~amd64 wrt bug #189441

  25 Aug 2007; Christian Hartmann <ian@gentoo.org> GSSAPI-0.24.ebuild:
  Fixed bug #189883

  24 Aug 2007; Raúl Porcel <armin76@gentoo.org> GSSAPI-0.24.ebuild:
  Add ~alpha/~ia64 wrt #189441

  21 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> GSSAPI-0.24.ebuild:
  Keyworded ~sparc wrt #189441

  20 Aug 2007; Jeroen Roovers <jer@gentoo.org> GSSAPI-0.24.ebuild:
  Marked ~hppa (bug #189441).

*GSSAPI-0.24 (19 Aug 2007)

  19 Aug 2007; Christian Hartmann <ian@gentoo.org> +metadata.xml,
  +GSSAPI-0.24.ebuild:
  New package for bug #188568
