@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/GSSAPI
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/GSSAPI/ChangeLog,v 1.13 2008/03/28 08:40:20 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/GSSAPI/ChangeLog,v 1.14 2008/08/02 20:25:30 tove Exp $
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> GSSAPI-0.24.ebuild:
+  perl-core/Test-Simple -> virtual/perl-Test-Simple (#211625)
 
   28 Mar 2008; Jeroen Roovers <jer@gentoo.org> GSSAPI-0.24.ebuild:
   Stable for HPPA too.
